added content, media query changes at 800px and 500px screen width

--- a/index.html
+++ b/index.html
@@ -1,16 +1,119 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Great Idea - Responsive I</title>
+  <head>
+    <meta charset="utf-8" />
+    <title>Great Idea - Responsive I</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
-  <link rel="stylesheet" href="css/index.css">
+    <link
+      href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/index.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
 
-</head>
+  <body>
+    <main class="container">
+      <header class="header-container">
+        <nav>
+          <a href="services.html">Services</a>
+          <a href="product.html">Product</a>
+          <a href="vision.html">Vision</a>
+          <a href="features.html">Features</a>
+          <a href="about.html">About</a>
+          <a href="contact.html">Contact</a>
+        </nav>
+        <div class="logo">
+          <img src="img/logo.png" alt="Great Idea Logo" />
+        </div>
+      </header>
+      <!-- begin main content -->
+      <div class="item-main-text">
+        <p>
+          INNOVATION <br />
+          ON <br />
+          DEMAND
+        </p>
+        <button class="get-started-button">Get Started</button>
+      </div>
+      <div class="item1">
+        <img src="img/header-img.png" alt="Image of Code" />
+      </div>
+      <div class="line-break"></div>
+      <div class="item2">
+        <h4>FEATURES</h4>
+        <p>
+          Lorem ipsum dolor sit amet, atqui graece sit ei, cu sit legendos
+          inimicus, ne nam modo iracundia. Ut paulo solet vis, ea qui alia elit
+          audiam, purto justo appellantur ea nec. Mazim graeco has te, vim
+          invidunt voluptaria cu. Nam populo legendos an, an per veri liber. Ea
+          clita facete sed, ad paulo quaeque usu, pri dictas offendit efficiendi
+          id.
+        </p>
+      </div>
+      <div class="item3">
+        <h4>ABOUT</h4>
+        <p>
+          Lorem ipsum dolor sit amet, atqui graece sit ei, cu sit legendos
+          inimicus, ne nam modo iracundia. Ut paulo solet vis, ea qui alia elit
+          audiam, purto justo appellantur ea nec. Mazim graeco has te, vim
+          invidunt voluptaria cu. Nam populo legendos an, an per veri liber. Ea
+          clita facete sed, ad paulo quaeque usu, pri dictas offendit efficiendi
+          id.
+        </p>
+      </div>
+      <div class="item-mid-pic">
+        <img src="img/mid-page-accent.jpg" alt="Vertical Scrolling Code" />
+      </div>
+      <div class="item4">
+        <h4>SERVICES</h4>
+        <p>
+          Lorem ipsum dolor sit amet, atqui graece sit ei, cu sit legendos
+          inimicus, ne nam modo iracundia. Ut paulo solet vis, ea qui alia elit
+          audiam, purto justo appellantur ea nec. Mazim graeco has te, vim
+          invidunt voluptaria cu. Nam populo legendos an, an per veri liber. Ea
+          clita facete sed, ad paulo quaeque usu, pri dictas offendit efficiendi
+          id.
+        </p>
+      </div>
+      <div class="item5">
+        <h4>PRODUCT</h4>
+        <p>
+          Lorem ipsum dolor sit amet, atqui graece sit ei, cu sit legendos
+          inimicus, ne nam modo iracundia. Ut paulo solet vis, ea qui alia elit
+          audiam, purto justo appellantur ea nec. Mazim graeco has te, vim
+          invidunt voluptaria cu. Nam populo legendos an, an per veri liber. Ea
+          clita facete sed, ad paulo quaeque usu, pri dictas offendit efficiendi
+          id.
+        </p>
+      </div>
+      <div class="item6">
+        <h4>VISION</h4>
+        <p>
+          Lorem ipsum dolor sit amet, atqui graece sit ei, cu sit legendos
+          inimicus, ne nam modo iracundia. Ut paulo solet vis, ea qui alia elit
+          audiam, purto justo appellantur ea nec. Mazim graeco has te, vim
+          invidunt voluptaria cu. Nam populo legendos an, an per veri liber. Ea
+          clita facete sed, ad paulo quaeque usu, pri dictas offendit efficiendi
+          id.
+        </p>
+      </div>
+      <div class="line-break"></div>
+      <footer>
+        <h4>CONTACT</h4>
+        <address>
+          765 Street
+          <br />
+          Anywhere, USA
+          <br /><br />
+          1 (777) 343-7566
+          <br /><br />
+          contactus@greatidea.io
+        </address>
 
-<body>
-<!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
-</body>
+        <h6>© Great Idea 2019.</h6>
+      </footer>
+    </main>
+  </body>
 </html>
